--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,7 @@
-<div
-  ><%= @player_1 %> vs. <%= @player_2 %>
+<div>
+  <form action='/names' method='post'>
+    <input type='text' name='player_1'>
+    <input type='text' name='player_2'>
+    <input type='submit' value='Submit'>
+  </form>
 </div>
