--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <div>
   <form action='/names' method='post'>
-    <label for='player_1'>Player 1 name:</label>
+    <label for='player_1'>Player 1:</label>
     <input type='text' name='player_1'>
-    <label for='player_2'>Player 2 name:</label>
+    <label for='player_2'>Player 2:</label>
     <input type='text' name='player_2'>
     <input type='submit' value='Submit'>
   </form>
